--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
+        "start": "react-scripts start",
         "build": "vite build"
     },
     "devDependencies": {
+        "@emotion/react": "^11.10.4",
+        "@emotion/styled": "^11.10.4",
+        "@mui/icons-material": "^5.10.9",
+        "@mui/material": "^5.10.10",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.1.1",
+        "@testing-library/user-event": "^13.5.0",
+        "web-vitals": "^2.1.4",
         "@headlessui/react": "^1.4.2",
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
@@ -16,7 +25,12 @@
         "postcss": "^8.4.18",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "sass": "^1.69.5",
         "tailwindcss": "^3.2.1",
         "vite": "^4.0.0"
+        
+    },
+    "dependencies": {
+        "react-router-dom": "^6.18.0"
     }
 }
